base1: Fix alignment issue with bootstrap-select control
https://github.com/patternfly/patternfly/issues/65

--- a/pkg/base1/cockpit.css
+++ b/pkg/base1/cockpit.css
@@ -494,6 +494,10 @@ a {
   display: none;
 }
 
+/* HACK: https://github.com/patternfly/patternfly/issues/65 */
+.bootstrap-select.btn-group {
+  margin-bottom: 0px !important;
+}
 
 /* Password strengh meter */
 
